<resources>
    <string name="app_name">NewBee</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">欢迎你</string>
    <string name="gank">干货集中营</string>
    <string name="gank_description">每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频</string>
    <string name="nickname">one_mighty</string>
    <string name="search_input_hint"> 搜索真的好了！不骗你！</string>
    <string name="spare_read">闲读</string>
    <string name="subscribe">订阅到邮箱</string>
    <string name="out_source">外包通缉令</string>
    <string name="submit_material">提交干货</string>
    <string name="rss_subscribe">RSS订阅</string>
    <string name="main_page">主页面</string>
    <string name="this_is_main_page">这是主页面</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="latest">最新内容</string>
    <string name="home_page">主页</string>
    <string name="bonus">福利</string>
    <string name="thumbnail">缩略图</string>
    <string name="copy_url">复制链接</string>
    <string name="open_url">打开链接</string>
    <string name="dialog">dialog</string>
    <string name="history">历史内容</string>
</resources>
